--- a/brie-it-helpdesk-bot-dashboard-v2.html
+++ b/brie-it-helpdesk-bot-dashboard-v2.html
@@ -512,9 +512,23 @@
                 content.innerHTML = history.map(msg => {
                     const msgClass = msg.from === 'user' ? 'user' : 'bot';
                     const label = msg.from === 'user' ? 'User' : 'Brie';
+                    
+                    // Handle both old (ISO string) and new (timestamp_ms) formats
+                    let date;
+                    if (msg.timestamp_ms) {
+                        // New format: Unix epoch in milliseconds
+                        date = new Date(msg.timestamp_ms);
+                    } else if (msg.timestamp) {
+                        // Old format: ISO string - add 'Z' for UTC if not present
+                        const isoString = msg.timestamp.endsWith('Z') ? msg.timestamp : msg.timestamp + 'Z';
+                        date = new Date(isoString);
+                    } else {
+                        date = new Date(); // Fallback to current time
+                    }
+                    
                     return `
                         <div class="conversation-msg ${msgClass}">
-                            <div class="timestamp">${new Date(msg.timestamp).toLocaleString()} - ${label}</div>
+                            <div class="timestamp">${date.toLocaleString()} - ${label}</div>
                             <div>${msg.message}</div>
                         </div>
                     `;
