Fix: Improve timestamp parsing in conversation history
- Added try-catch for ISO string parsing
- Added validation to check if date is valid before using
- Falls back to current time if all parsing fails
- Fixes Invalid Date display in conversation history
- Closes #10

--- a/brie-it-helpdesk-bot-dashboard-v2.html
+++ b/brie-it-helpdesk-bot-dashboard-v2.html
@@ -524,11 +524,24 @@
                         const ts = msg.timestamp < 4102444800 ? msg.timestamp * 1000 : msg.timestamp;
                         date = new Date(ts);
                     } else if (typeof msg.timestamp === 'string') {
-                        // ISO string - add 'Z' for UTC if not present
-                        const isoString = msg.timestamp.endsWith('Z') ? msg.timestamp : msg.timestamp + 'Z';
-                        date = new Date(isoString);
+                        // ISO string - try parsing with and without Z
+                        try {
+                            date = new Date(msg.timestamp);
+                            // Check if date is valid
+                            if (isNaN(date.getTime())) {
+                                // Try adding Z for UTC
+                                date = new Date(msg.timestamp + 'Z');
+                            }
+                        } catch (e) {
+                            date = new Date(); // Fallback to current time
+                        }
                     } else {
                         date = new Date(); // Fallback to current time
+                    }
+                    
+                    // Final validation
+                    if (isNaN(date.getTime())) {
+                        date = new Date(); // Fallback if still invalid
                     }
                     
                     return `
