Fix: Dashboard Recent Interactions now shows CST time
Added 'Z' suffix to date parsing to treat as UTC before converting to CST
Was showing 9:23 PM (UTC), now shows 4:23 PM (CST)

--- a/brie-it-helpdesk-bot-dashboard-v2.html
+++ b/brie-it-helpdesk-bot-dashboard-v2.html
@@ -462,7 +462,8 @@
             const displayItems = interactions.slice(startIndex, endIndex);
             
             tbody.innerHTML = displayItems.map(item => {
-                const date = new Date(item.date).toLocaleString('en-US', { timeZone: 'America/Chicago' });
+                // Parse date as UTC and convert to CST
+                const date = new Date(item.date + 'Z').toLocaleString('en-US', { timeZone: 'America/Chicago' });
                 let badgeClass = 'badge-info';
                 if (item.outcome === 'Resolved by Brie') badgeClass = 'badge-success';
                 else if (item.outcome === 'Self-Service Solution') badgeClass = 'badge-info';
