Fix issue #24: Slack message delivery for approval completions
- Added SLACK_BOT_TOKEN environment variable to brie-ad-group-manager Lambda
- Added conversation history updates after Slack messages sent
- Added tracking record lookup to link approvals back to conversations
- Added 'as_user: True' parameter to Slack API calls
- Both user DMs and IT channel notifications now working
- Dashboard conversation history now includes all approval completion messages

--- a/brie-it-helpdesk-bot-dashboard-v2.html
+++ b/brie-it-helpdesk-bot-dashboard-v2.html
@@ -538,7 +538,16 @@
                         
                         // Validate and format with CST timezone
                         if (date && !isNaN(date.getTime())) {
-                            dateStr = date.toLocaleString('en-US', { timeZone: 'America/Chicago' });
+                            dateStr = date.toLocaleString('en-US', { 
+                                timeZone: 'America/Chicago',
+                                month: '2-digit',
+                                day: '2-digit', 
+                                year: 'numeric',
+                                hour: '2-digit',
+                                minute: '2-digit',
+                                second: '2-digit',
+                                hour12: true
+                            });
                         } else {
                             console.warn('Invalid date for message:', msg);
                             dateStr = 'Invalid Date';
